test/syntax/success/simple_functions.cash
contract Test(int x, string y) {
    function hello(sig s, pubkey pk) {
        require(sigCheck(s, pk));
    }

    function world(int a) {
        require(a + 5 == 10);
    }
}
