test/syntax/fail/function_with_reserved_name.cash
contract Test(int x, string y) {
    function sigCheck(sig s, pubkey pk) {
    }
}
